[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/player_stats.gd" type="Script" id=1]
[ext_resource path="res://sprites/heart.png" type="Texture" id=2]
[ext_resource path="res://sprites/mana.png" type="Texture" id=3]

[node name="player_stats" type="Node2D"]
position = Vector2( 61, 326 )
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="life" type="Sprite" parent="."]
position = Vector2( -5, 13.3333 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="life2" type="Sprite" parent="."]
position = Vector2( -7.62939e-06, 13.3333 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="life3" type="Sprite" parent="."]
position = Vector2( 4.99999, 13.3333 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="mana" type="Sprite" parent="."]
position = Vector2( -5, 17.6667 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="mana2" type="Sprite" parent="."]
position = Vector2( -7.62939e-06, 17.6667 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="mana3" type="Sprite" parent="."]
position = Vector2( 4.99998, 17.6667 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
